CHANGE: criação das interfaces, contextbase e a connectionstring

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-9UK2PBS\\SQLEXPRESS;Initial Catalog=SISTEMA_FINANCEIRO;Integrated Security=False;User ID=sa;Password=1234;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False"
+    //"DefaultConnection": "Data Source=NBQSP-FC693;Initial Catalog=SISTEMA_FINANCEIRO;Integrated Security=True" // Eviatar, mas caso não tenha criado um usuario no banco
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
